fix hero overflow

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -9,7 +9,7 @@ body {
 }
 
 .custom-wrapper {
-  padding: 0 3em;
+  padding: 0 2em;
 }
 
 .main-hero {
@@ -18,6 +18,7 @@ body {
   animation: heroCaroussel 20s ease-in-out infinite;
   background-size: contain;
   color: white;
+  font-size: 0.79em;
 
   .content-shadow {
     width: inherit;
